--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,11 @@
     <artifactId>JPageTest</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20190722</version>
+        </dependency>
+    </dependencies>
 </project>
