--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
         </dependency>
     </dependencies>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub BrendonCurmi Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/BrendonCurmi/JPageTest</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
